@@ -174,6 +174,11 @@ not used in PCRE2.
 from distribution tarballs, owing to a typo in Makefile.am which had 
 testoutput8-16-3 twice. Now fixed.
 
+39. If the only branch in a conditional subpattern was anchored, the whole 
+subpattern was treated as anchored, when it should not have been, since the 
+assumed empty second branch cannot be anchored. Demonstrated by test patterns 
+such as /(?(1)^())b/ or /(?(?=^))b/.
+
 
 Version 10.31 12-February-2018
 ------------------------------
